--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,22 +1,26 @@
-name: pytest
+name: Test Workflow
 
-on: push
+on:
+  push:
+    branches: 
+      - test_2
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
-    - name: Install dependencies
-      run: pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run tests
-      run: pytest tests/ -v
+      - name: Run tests
+        run: pytest tests/ -v
